--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <span class="subheading">I am currently pursuing B.Tech IT third year @st. Joseph's College of Engineering.</span>
           </div>
         </div>
       </div>
