--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,8 @@
 
   <title>Mahudoom's Blog</title>
 
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
@@ -20,6 +22,7 @@
 
   <!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">
+
 
 </head>
 
